Cookies auth for browsers implementation

--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
@@ -5,5 +5,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Local": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;"
+  "Local": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;",
+  "Issuer": "VideoconferencingBackend",
+  "Audience": "https://localhost:5000",
+  "Lifetime": "120",
+  "TokenSalt": "VideoconferencingBackendddddddd",
+  "PasswordEnthropy": "2" 
 }
