Added trickle/join/publish requests

--- a/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
+++ b/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\PluginApi\PluginResponse\" />
+    <Folder Include="Models\Janus\PluginApi\PluginResponse\" />
   </ItemGroup>
   <PropertyGroup>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
