--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.Release.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.Release.json
@@ -1,8 +1,8 @@
 ﻿{
-  "Local": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;",
+  "ConnectionString": "User Id=postgres;Password=faunus17;Server=176.107.160.64;Port=5432;Database=videoconferencing;",
   "Issuer": "VideoconferencingBackend",
   "Audience": "https://localhost:5000",
-  "Lifetime": "2",
+  "Lifetime": "100000",
   "TokenSalt": "VideoconferencingBackendddddddd",
-  "PasswordEnthropy": "3"
+  "PasswordEnthropy": "1"
 }
