--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.QA.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.QA.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Local": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;",
+  "ConnectionString": "User Id=postgres;Password=faunus17;Server=176.107.160.64;Port=5432;Database=videoconferencing;",
   "Issuer": "VideoconferencingBackend",
   "Audience": "https://localhost:5000",
   "Lifetime": "120",
