Removed roles, added messages

--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
@@ -8,9 +8,10 @@
   "ConnectionString": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;",
   "Issuer": "VideoconferencingBackend",
   "Audience": "https://localhost:5000",
-  "Lifetime": "120",
+  "Lifetime": "100000",
   "TokenSalt": "VideoconferencingBackendddddddd",
   "PasswordEnthropy": "2",
   "UsersFindPageSize": "3",
-  "GroupsFindPageSize":  "3"  
+  "GroupsFindPageSize": "3",
+  "MessagesOnPage": "10"
 }
