--- a/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
+++ b/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\Hub\ServerRequest\" />
+    <Folder Include="DTO\Hub\ServerEvents\" />
     <Folder Include="Models\SignalrApi\" />
   </ItemGroup>
 
