Publish video working

--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
@@ -8,6 +8,7 @@
   "ConnectionString": "User Id=admin;Password=password;Server=localhost;Port=5432;Database=videoconferencing;",
   "Issuer": "VideoconferencingBackend",
   "Audience": "https://localhost:5000",
+  "Janus": "ws://10.219.144.39:8188",
   "Lifetime": "100000",
   "TokenSalt": "VideoconferencingBackendddddddd",
   "PasswordEnthropy": "2",
