--- a/SignalRClient/package.json
+++ b/SignalRClient/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --inline --config webpack.config.js --open --NODE_ENV=development"
+    "dev": "webpack-dev-server --progress --inline --config webpack.config.js --https --open --NODE_ENV=development"
   },
   "author": "Lestrangge",
   "license": "MIT",
@@ -31,6 +31,7 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-toastify": "^4.0.2",
+    "@types/webrtc": "0.0.24",
     "axios": "^0.18.0",
     "es6-promise": "^4.2.6",
     "react": "^16.8.6",
