--- a/SignalRClient/tsconfig.json
+++ b/SignalRClient/tsconfig.json
@@ -13,7 +13,10 @@
             "src/*":["./src/*"],
             "components/*":["./src/components/*"],
             "assets/*":["./assets"]
-        }
+        },
+        "types": [
+            "webrtc"
+          ]
     },
     "include": [
         "./src/**/*"
