--- a/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
+++ b/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
@@ -26,8 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\Hub\ServerEvents\" />
-    <Folder Include="Models\SignalrApi\" />
+    <Folder Include="Models\SignalrApi\Responses\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,6 +47,9 @@
   <ItemGroup>
     <Content Update="appsettings.json">
       <TransformOnBuild>true</TransformOnBuild>
+    </Content>
+    <Content Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <PropertyGroup>
