--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.Release.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.Release.json
@@ -4,5 +4,7 @@
   "Audience": "https://localhost:5000",
   "Lifetime": "100000",
   "TokenSalt": "VideoconferencingBackender",
-  "PasswordEnthropy": "1"
+  "PasswordEnthropy": "1",
+  "Janus": "ws://localhost:8188"
+
 }
