--- a/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
+++ b/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
@@ -48,7 +48,7 @@
     <Content Update="appsettings.json">
       <TransformOnBuild>true</TransformOnBuild>
     </Content>
-    <Content Update="NLog.config">
+    <Content Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
