--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.Development.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.Development.json
@@ -5,6 +5,7 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
-  //"ConnectionString": "User Id=postgres;Password=faunus17;Server=176.107.160.64;Port=5432;Database=videoconferencing;"
+  },
+  "ConnectionString": "User Id=postgres;Password=faunus17;Server=176.107.160.64;Port=5432;Database=videoconferencing;",
+  "Janus": "ws://176.107.160.64:8188/"
 }
