--- a/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
+++ b/VideoconferencingBackend/VideoconferencingBackend/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trace",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
     }
   },
   "AllowedHosts": "*",
