--- a/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
+++ b/VideoconferencingBackend/VideoconferencingBackend/VideoconferencingBackend.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.1.6" />
+    <PackageReference Include="FirebaseAdmin" Version="1.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
@@ -49,6 +50,9 @@
       <TransformOnBuild>true</TransformOnBuild>
     </Content>
     <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="videoconferencing-67a4f-firebase-adminsdk-lsu71-acb7bb85c1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
